--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -13,6 +13,7 @@
 -->
 
 <div>
+	<%= variabile %>
 <form method="POST">
  <fieldset>
   <label for="user">Username</label><input type="text" id="user" name="user" />
