--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,5 +1,5 @@
 <!--
-   Nome:untitled.html
+   Nome:authentication.html
    Package: 
    Autore:
    Data:
@@ -9,11 +9,10 @@
 	__________________________________
    | Data | Programmatore | Modifiche |
    |______|_______________|___________|
-   |      |               |           |
+   |      |               | Scrittura codice          |
 -->
 
 <div>
-	<%= variabile %>
 <form method="POST">
  <fieldset>
   <label for="user">Username</label><input type="text" id="user" name="user" />
