--- a/js/templates/ContactsTemplate.html
+++ b/js/templates/ContactsTemplate.html
@@ -12,4 +12,4 @@
    |      |               |           |
 -->
 
-<div class="contact"><%= username %></div>
+<li class="contact"><%= username %></li>
