--- a/css/MyTalk.css
+++ b/css/MyTalk.css
@@ -28,6 +28,8 @@ html, body{
  float:left;
  width:18%;
  margin:0;
+ padding:2em;
+ border-right:  0.1em solid #000000;
 }
 ul{
  list-style:none inside;
