--- a/js/templates/FunctionTemplate.html
+++ b/js/templates/FunctionTemplate.html
@@ -20,7 +20,7 @@
 		<button id="video">Videochiama</button>
 		<input type="checkbox" name="record" id="record" >Registra la chiamata
 	<% }else{ %>
-		<ul>
+		<ul id="optionContacts">
 	
 		</ul>
 	<% } %>
