--- a/js/templates/ChatTemplate.html
+++ b/js/templates/ChatTemplate.html
@@ -11,8 +11,9 @@
    |______|_______________|___________|
    |      |               |           |
 -->
-	<% if(message){ %>
-		<textarea disabled><%= messages %></textarea>
-		<input type="text" name="message" id="message" />
-		<button id="Send">Invia Messaggio</button>
+
+		<ul id='messages'></ul>
+	<% if(end){ %>
+		<li><input type="text" name="message" id="message" />
+		<button id="Send">Invia Messaggio</button></li>
 	<% } %>
