modifica funzionalità di chat

--- a/js/templates/ChatTemplate.html
+++ b/js/templates/ChatTemplate.html
@@ -12,8 +12,7 @@
    |      |               |           |
 -->
 
-		<ul id='messages'></ul>
-	<% if(end){ %>
-		<li><input type="text" name="message" id="message" />
-		<button id="Send">Invia Messaggio</button></li>
-	<% } %>
+
+	<span id='messages'></span>
+	<input type="text" name="message" id="message" />
+	<button id="Send">Invia Messaggio</button>
